--- a/Sample/src/main/webapp/praj.css
+++ b/Sample/src/main/webapp/praj.css
@@ -1,53 +1,182 @@
-body {
+* {
   margin: 0;
-  padding: 20px;
+  padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
-  background: #00ff9dab;
 }
 
-.box {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-70%, -70%);
+body {
+  background-image: url("./colorful-music-background.jpg");
+  background-repeat: no repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #cccc;
+  min-height: 100vh;
+}
+
+.card {
+  position: relative;
+  width: 350px;
+  height: 120px;
   background: white;
-  display: flex;
+  box-shadow: 0 50px 50px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  border-radius: 10px;
+  overflow: hidden;
+  transition: height 0.5s ease-in-out;
+  border-radius: 20px;
 }
 
-.box:hover {
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
-}
-img {
-  width: 250px;
+.card.active {
+  height: 350px;
 }
 
-.imagbox {
-  padding: 50px;
+.card .content {
+  display: flex;
+  align-items: center;
+}
+
+.card .content .imgBx {
+  position: relative;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.card .content .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card .content h2 {
+  margin-left: 15px;
+  font-size: 1.3em;
+  color: black;
+}
+
+.card .content h2 span {
+  font-size: 0.8em;
+  font-weight: 400;
+  color: #999;
+}
+
+.navigation {
+  position: relative;
+  top: 25px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 20px 0;
+}
+
+.navigation li {
+  list-style: none;
+  margin: 15px 0;
+}
+
+.navigation li a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: #555;
+  font-size: 1.1em;
+  transition: 0.25s;
+}
+
+.navigation li a:hover {
+  color: #11b7bd;
+}
+
+.toggle {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  background: #11b7bd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.toggle ion-icon {
+  color: white;
+  font-size: 1.4em;
+  transition: transform ease-in-out 0.5s;
+}
+
+.card.active .toggle ion-icon {
+  transform: rotate(-180deg);
+}
+
+form {
+  /* margin-top: 5%; */
+  text-align: center;
 }
 
 h1 {
-  margin: 0;
-  padding: 0;
-  color: rgb(226, 43, 186);
+  color: white;
+  margin-bottom: 10px;
+  font-size: 100px;
+}
+label {
+  width: 200px;
+  font-size: 40px;
+  color: white;
 }
 
-a {
-  display: inline-block;
-  padding: 7px 10px;
-  background: rgb(210, 30, 129);
-  color: antiquewhite;
+.inactive {
+  display: none;
+}
+
+.active {
+  display: block;
+  background: white;
+}
+
+h1 {
+  color: rgb(253, 251, 251);
+  margin-left: 10px;
+  width: 20%;
+  font-size: 100;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.image_section {
+  width: 40%;
+  margin: 1%;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.details-section {
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  color: white;
+  width: 30%;
+  font-size: 24px;
+  font-family: sans-serif;
+  font-weight: 600;
+  text-align: left;
+}
+
+.img_instrument {
   border-radius: 5px;
 }
-#link {
-	position:absolute;
-	right: 20px;
-	height: 35px;
-}
-input{
-	height:20px;
-	width: 150px;
+
+.background_image {
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  position: absolute;
 }
